# trdpSimulator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: TCNOpen_TRDP.md  design.md  development-next-steps.md  issue-tracker.md  milestone-2-plan.md  milestones.md  operations-handbook.md  testing-strategy.md  trdp_xml_examples.md
include/trdp_simulator/communication/: Diagnostics.hpp  StackAdapter.hpp  TrdpError.hpp  Types.hpp  Wrapper.hpp
include/trdp_simulator/device/: DeviceProfileRepository.hpp  XmlValidator.hpp
include/trdp_simulator/simulation/: Engine.hpp  Scenario.hpp  ScenarioLoader.hpp  ScenarioParser.hpp  ScenarioRepository.hpp  ScenarioSchemaValidator.hpp  ScenarioYaml.hpp
resources/scenarios/: scenario.schema.yaml
resources/trdp/: loopback.yaml  trdp-config.xsd
resources/ui/: dashboard.html
scripts/: build_docker.sh  build_python_package.sh  publish_docker.sh  publish_python_package.sh
src/: main.cpp
src/communication/: Wrapper.cpp
src/device/: DeviceProfileRepository.cpp  XmlValidator.cpp
src/fastapi/: __init__.py  responses.py  testclient.py
src/simulation/: Engine.cpp  ScenarioLoader.cpp  ScenarioParser.cpp  ScenarioRepository.cpp  ScenarioSchemaValidator.cpp  ScenarioYaml.cpp
src/trdp_simulator/: __init__.py
src/trdp_simulator/api/: __init__.py  catalog.py  server.py
src/trdp_simulator/cli/: main.py
src/trdp_simulator/communication/: wrapper.py
src/trdp_simulator/simulation/: controller.py  engine.py
tests/: CMakeLists.txt  test_api_server.py  test_cli.py  test_device_repository.cpp  test_engine.cpp  test_engine.py  test_scenario_loader.cpp  test_scenario_repository.cpp  test_scenario_schema.cpp  test_simulation_controller.py  test_wrapper.cpp
