add_executable(trdp_sim_engine_tests test_engine.cpp)
target_link_libraries(trdp_sim_engine_tests PRIVATE trdp_simulator)
target_compile_features(trdp_sim_engine_tests PRIVATE cxx_std_20)
add_test(NAME engine COMMAND trdp_sim_engine_tests)

add_executable(trdp_sim_wrapper_tests test_wrapper.cpp)
target_link_libraries(trdp_sim_wrapper_tests PRIVATE trdp_simulator)
target_compile_features(trdp_sim_wrapper_tests PRIVATE cxx_std_20)
add_test(NAME wrapper COMMAND trdp_sim_wrapper_tests)

add_executable(trdp_sim_device_repo_tests test_device_repository.cpp)
target_link_libraries(trdp_sim_device_repo_tests PRIVATE trdp_simulator)
target_compile_features(trdp_sim_device_repo_tests PRIVATE cxx_std_20)
add_test(NAME device_repository COMMAND trdp_sim_device_repo_tests)

add_executable(trdp_sim_scenario_loader_tests test_scenario_loader.cpp)
target_link_libraries(trdp_sim_scenario_loader_tests PRIVATE trdp_simulator)
target_compile_features(trdp_sim_scenario_loader_tests PRIVATE cxx_std_20)
add_test(NAME scenario_loader COMMAND trdp_sim_scenario_loader_tests)

add_executable(trdp_sim_scenario_repository_tests test_scenario_repository.cpp)
target_link_libraries(trdp_sim_scenario_repository_tests PRIVATE trdp_simulator)
target_compile_features(trdp_sim_scenario_repository_tests PRIVATE cxx_std_20)
add_test(NAME scenario_repository COMMAND trdp_sim_scenario_repository_tests)

add_executable(trdp_sim_scenario_schema_tests test_scenario_schema.cpp)
target_link_libraries(trdp_sim_scenario_schema_tests PRIVATE trdp_simulator)
target_compile_features(trdp_sim_scenario_schema_tests PRIVATE cxx_std_20)
add_test(NAME scenario_schema COMMAND trdp_sim_scenario_schema_tests)
